# dnsgen

./: .gitignore  Cargo.toml  Corefile  Cross.toml  Dockerfile  Makefile.toml  example.sh
.github/workflows/: binary-publish.yaml  docker-publish.yaml
src/: arp.rs  lib.rs  store.rs
