[package]
name = "dnsgen"
version = "0.1.0"
authors = ["Til Blechschmidt <til@blechschmidt.de>"]
edition = "2021"

[dependencies]
# Server side
tokio = { version = "1", features = ["full"] }
warp = "0.3"

# Client side
pnet_datalink = "0.31"
ipnetwork = "0.19"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }

# Common
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
ipnet = "2.7.1"
arp-toolkit = "0.3.0"

[profile.release]
lto = true
